[FIX] position and z-index

--- a/templates/base/theme/global.css
+++ b/templates/base/theme/global.css
@@ -555,26 +555,26 @@ li.small-block .fa-stack {
 
 .message-ephemeral-container {
 	position: fixed;
+	left: 50%;
+    transform: translateX(-50%);
+	z-index: 3;
 	opacity: 0;
-	z-index: 1000;
 	top: 0.456em;
-	width: 100%;
-	margin: 0;
-	text-align: center;
 }
 
 .message-ephemeral-container .message-helper {
-	display: inline-block;
-	max-width: 90%;
-    padding: 1em 1em 1em 3em;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-	border-width: 2px;
+	box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 	overflow: visible;
 }
 
-@media (min-width: 769px) {
+@media (max-width: 768px) {
 	.message-ephemeral-container {
+		width: 100%;
 		top: 1em;
+	}
+
+	.message-ephemeral-container .message-helper {
+		max-width: 90%;
 	}
 }
 
